--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
               
               <!-- 請改成這樣 -->
               <!-- <a class="button special-btn" href="guide.html" target="_blank" rel="noopener" role="button">彈出式</a> -->
+              <a class="button" href="guide.html">Order Guide</a>
               <a class="button special-btn" href="guide.html" role="button">Order Guide</a>
               <a class="button special-btn" href="collection.html" role="button">The Archives</a>
               <a class="button special-btn" href="wish.html" role="button">Make a Wish</a>
