Add duplicate button for 餘量表單

--- a/guide.html
+++ b/guide.html
@@ -171,6 +171,7 @@
                  <a class="button special-btn" href="XXXX.html" target="_blank" rel="noopener" role="button">✧ 預購表單 ✧</a>
                  <a class="button special-btn" href="XXXX.html" target="_blank" rel="noopener" role="button">✦ 匯款回服 ✦</a>
                  <a class="button special-btn" href="XXXX.html" target="_blank" rel="noopener" role="button">✧ 餘量表單 ✧</a>
+                 <a class="button special-btn" target="_blank" rel="noopener" role="button">✧ 餘量表單 ✧</a>
             
         </div>
 
