--- a/privacy.html
+++ b/privacy.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Privacy Policy | XXXX Studio</title>
+    <title>Privacy Policy | Nebula Lullaby Studio ⋆ 星雲搖籃曲</title>
     <link rel="icon" type="image/x-icon" href="/images/avatar.png">
 
     <meta name="robots" content="noindex">
@@ -52,7 +52,7 @@
       <!-- 如果還有其他社群可以繼續加 -->
     </div>
     
-    <p class="copyright">© 2026 XXXX Studio</p>
+    <p class="copyright">© 2026 Nebula Lullaby Studio. All rights reserved. Nebula Lullaby™ and the infinity device are trademarks.</p>
     <a href="privacy.html" class="privacy-link">Privacy Policy</a>
 </footer>
         
