--- a/privacy.html
+++ b/privacy.html
@@ -52,8 +52,8 @@
       <!-- 如果還有其他社群可以繼續加 -->
     </div>
     
-    <p class="copyright">© 2026 Nebula Lullaby Studio. All rights reserved. Nebula Lullaby™ and the infinity device are trademarks.</p>
-    <a href="privacy.html" class="privacy-link">Privacy Policy</a>
+    <p class="copyright">© 2026 Nebula Lullaby Studio.<br>All rights reserved.<br>Nebula Lullaby™ and the infinity device are trademarks.</p>
+    <br><a href="privacy.html" class="privacy-link">Privacy Policy</a>
 </footer>
         
     </div>
