--- a/privacy.html
+++ b/privacy.html
@@ -52,7 +52,10 @@
       <!-- 如果還有其他社群可以繼續加 -->
     </div>
     
-    <p class="copyright">© 2026 Nebula Lullaby Studio.<br>All rights reserved.<br>Nebula Lullaby™ and the infinity device are trademarks.</p>
+    <p class="copyright" style="line-height: 1.8;">
+        © 2026 Nebula Lullaby Studio. All rights reserved.<br>
+        Nebula Lullaby&trade; and the infinity device are trademarks.
+    </p>
     <br><a href="privacy.html" class="privacy-link">Privacy Policy</a>
 </footer>
         
