--- a/wish.html
+++ b/wish.html
@@ -3,27 +3,22 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Make a Wish | XXXX Studio</title>
-    <link rel="icon" type="image/x-icon" href="/images/avatar.png"> <!-- Update this with your own favicon -->
+    <title>Make a Wish | Nebula Lullaby Studio ⋆ 星雲搖籃曲</title>
+    <link rel="icon" type="image/x-icon" href="images/avatar.png">
 
-    <!-- Meta Description - Write a description (150-160 characters recommended) -->
-    <meta name="description" content="Replace this with your own, this appears in search results and when sharing.">
+        <meta name="description" content="Nebula Lullaby Studio ⋆ 星雲搖籃曲 香港原創棉花娃衣工作室。許願過去娃衣再販或新品元素。">
 
-    <!-- Keywords -->
-    <meta name="keywords" content="your name, industry, and specialties">
+    <meta name="keywords" content="Nebula Lullaby Studio, 星雲搖籃曲, 香港原創棉花娃衣, 娃衣工作室, 20cm棉花娃衣, 10cm棉花娃衣, 15cm棉花娃衣">
 
-    <!-- Canonical URL - Helps prevent duplicate content issues -->
-    <link rel="canonical" href="https://yourwebsite.com">
+    <link rel="canonical" href="https://nebulalullaby.studio/wish.html">
 
-    <!-- Open Graph / 社交媒體分享預覽 -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://XXXXXXXXXXXX">
-    <meta property="og:title" content="名">
-    <meta property="og:description" content="介紹">
-    <meta property="og:image" content="網">
+    <meta property="og:url" content="https://nebulalullaby.studio/wish.html">
+    <meta property="og:title" content="Nebula Lullaby Studio ⋆ 星雲搖籃曲 Make a Wish">
+    <meta property="og:description" content=“許願過去娃衣再販或新品元素">
+    <meta property="og:image" content="https://nebulalullaby.studio/images/og-m.png">
 
-    <!-- Author Information -->
-    <meta name="author" content="Your Name">
+    <meta name="author" content="Nebula Lullaby Studio ⋆ 星雲搖籃曲">
 
     <!-- Stylesheets -->
     <link rel="stylesheet" href="css/reset.css">
@@ -34,7 +29,7 @@
     <div class="container">
 
         <h1 style="font-size: 24px; margin-bottom: 10px; color: #7373B9;">Make a Wish</h1>
-        <p style="margin-bottom: 30px; color: #7373B9;">XXXX XXXXXXX XXXXX XXX XX</p>
+        <p style="margin-bottom: 35px; color: #7373B9;">許願返場或新品元素</p>
 
         <!-- Google Form 嵌入區 (妳之後把連結貼在這裡) -->
         <div class="guide-text" style="margin-top: 20px; padding: 10px !important;">
@@ -52,8 +47,11 @@
       <!-- 如果還有其他社群可以繼續加 -->
     </div>
     
-    <p class="copyright">© 2026 XXXX Studio</p>
-    <a href="privacy.html" class="privacy-link">Privacy Policy</a>
+    <p class="copyright" style="line-height: 1.8;">
+        © 2026 Nebula Lullaby Studio. All rights reserved.<br>
+        Nebula Lullaby&trade; and the infinity device are trademarks.
+    </p>
+    <br><a href="privacy.html" class="privacy-link">Privacy Policy</a>
 </footer>
     </div>
 
