--- a/collection.html
+++ b/collection.html
@@ -3,27 +3,22 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Collection | XXXX Studio</title>
-    <link rel="icon" type="image/x-icon" href="/images/avatar.png"> <!-- Update this with your own favicon -->
+    <title>The Archive | Nebula Lullaby Studio ⋆ 星雲搖籃曲</title>
+    <link rel="icon" type="image/x-icon" href="images/avatar.png">
 
-    <!-- Meta Description - Write a description (150-160 characters recommended) -->
-    <meta name="description" content="Replace this with your own, this appears in search results and when sharing.">
+        <meta name="description" content="Nebula Lullaby Studio ⋆ 星雲搖籃曲 香港原創棉花娃衣工作室。歷年作品，10cm / 15cm / 20cm娃衣設計一覽。">
 
-    <!-- Keywords -->
-    <meta name="keywords" content="your name, industry, and specialties">
+    <meta name="keywords" content="Nebula Lullaby Studio, 星雲搖籃曲, 香港原創棉花娃衣, 娃衣工作室, 20cm棉花娃衣, 10cm棉花娃衣, 15cm棉花娃衣">
 
-    <!-- Canonical URL - Helps prevent duplicate content issues -->
-    <link rel="canonical" href="https://yourwebsite.com">
+    <link rel="canonical" href="https://nebulalullaby.studio/collection.html">
 
-    <!-- Open Graph / 社交媒體分享預覽 -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://XXXXXXXXXXXX">
-    <meta property="og:title" content="名">
-    <meta property="og:description" content="介紹">
-    <meta property="og:image" content="網">
+    <meta property="og:url" content="https://nebulalullaby.studio/collection.html">
+    <meta property="og:title" content="Nebula Lullaby Studio ⋆ 星雲搖籃曲 The Archive">
+    <meta property="og:description" content=“過去娃衣一覽">
+    <meta property="og:image" content="https://nebulalullaby.studio/images/og-m.png">
 
-    <!-- Author Information -->
-    <meta name="author" content="Your Name">
+    <meta name="author" content="Nebula Lullaby Studio ⋆ 星雲搖籃曲">
 
     <!-- Stylesheets -->
     <link rel="stylesheet" href="css/reset.css">
@@ -34,7 +29,7 @@
     <div class="container" style="max-width: 500px;"> <!-- 相簿頁寬度微調 -->
  
         <h1 style="font-size: 24px; margin-bottom: 10px;">The Archive</h1>
-        <p style="margin-bottom: 40px;">Archive Collection</p>
+        <p style="margin-bottom: 35px;">娃衣一覽</p>
 
         <!-- 相簿網格 -->
         
@@ -155,8 +150,11 @@
         <a href="你的Threads連結" class="social-circle" target="_blank" rel="noopener noreferrer"><img class="social-icon-img" src="images/icons/threads.svg" alt="Threads Logo"></a>
         <a href="你的Facebook連結" class="social-circle" target="_blank" rel="noopener noreferrer"><img class="social-icon-img" src="images/icons/facebook.svg" alt="Facebook Logo"></a>
     </div>
-    <p class="copyright">© 2026 XXXX Studio</p>
-    <a href="privacy.html" class="privacy-link">Privacy Policy</a>
+    <p class="copyright" style="line-height: 1.8;">
+        © 2026 Nebula Lullaby Studio. All rights reserved.<br>
+        Nebula Lullaby&trade; and the infinity device are trademarks.
+    </p>
+    <br><a href="privacy.html" class="privacy-link">Privacy Policy</a>
 </footer>
 
 <!-- 1. 關閉所有容器 -->
