--- a/index.html
+++ b/index.html
@@ -14,27 +14,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Page Title - Change this to your name/brand (50-60 characters recommended) -->
-    <title>XXXX Studio</title>
-    <link rel="icon" type="image/x-icon" href="/images/avatar.png"> <!-- Update this with your own favicon -->
+        <title>Nebula Lullaby Studio ⋆ 星雲搖籃曲</title>
+    <!-- Update this with your own favicon -->
+        <link rel="icon" type="image/x-icon" href="images/avatar.png">
 
     <!-- Meta Description - Write a description (150-160 characters recommended) -->
-    <meta name="description" content="Replace this with your own, this appears in search results and when sharing.">
+        <meta name="description" content="Nebula Lullaby Studio ⋆ 星雲搖籃曲 香港原創棉花娃衣工作室，涵蓋10cm / 15cm / 20cm娃衣設計。最新預購及餘量資訊請追蹤我們的社群帳號。">
 
     <!-- Keywords -->
-    <meta name="keywords" content="your name, industry, and specialties">
+    <meta name="keywords" content="Nebula Lullaby Studio, 星雲搖籃曲, 香港原創棉花娃衣, 娃衣工作室, 20cm棉花娃衣, 10cm棉花娃衣, 15cm棉花娃衣">
 
     <!-- Canonical URL - Helps prevent duplicate content issues -->
-    <link rel="canonical" href="https://yourwebsite.com">
+    <link rel="canonical" href="https://nebulalullaby.studio">
 
     <!-- Open Graph / 社交媒體分享預覽 -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://XXXXXXXXXXXX">
-    <meta property="og:title" content="名">
-    <meta property="og:description" content="介紹">
-    <meta property="og:image" content="網">
+    <meta property="og:url" content="https://nebulalullaby.studio">
+    <meta property="og:title" content="Nebula Lullaby Studio ⋆ 星雲搖籃曲">
+    <meta property="og:description" content="香港原創棉花娃衣工作室">
+    <meta property="og:image" content="https://nebulalullaby.studio/images/og-m.png">
 
     <!-- Author Information -->
-    <meta name="author" content="Your Name">
+    <meta name="author" content="Nebula Lullaby Studio ⋆ 星雲搖籃曲">
 
     <!-- Stylesheets -->
     <link rel="stylesheet" href="css/reset.css">
@@ -63,7 +64,7 @@
             -->
             <!-- 將 src 改為妳的 Logo 檔案名稱 -->
             <!-- 移除 srcset（因為妳現在可能只有一張圖，避免干擾） -->
-            <img class="avatar" src="images/logo.png" alt="XXXX Logo">
+            <img class="avatar" src="images/avatar.png" alt="Nebula Lullaby Studio - Infinity Logo">
             <!-- 舊有 <img class="avatar avatar--rounded" src="images/avatar.png" srcset="images/avatar@2x.png 2x" alt="LittleLink"> -->
 
             <!-- Replace with your name or brand -->
@@ -72,7 +73,7 @@
             </h1> -->
 
             <!-- Add a short description about yourself or your brand -->
-            <p>Original XXXX Outfit Studio</p>
+            <p>香港原創棉花娃衣工作室</p>
 
             <!-- All your buttons go here -->
             <div class="button-stack" role="navigation">
@@ -96,8 +97,11 @@
       <!-- 如果還有其他社群可以繼續加 -->
     </div>
     
-    <p class="copyright">© 2026 XXXX Studio</p>
-    <a href="privacy.html" class="privacy-link">Privacy Policy</a>
+    <p class="copyright" style="line-height: 1.8;">
+        © 2026 Nebula Lullaby Studio. All rights reserved.<br>
+        Nebula Lullaby&trade; and the infinity device are trademarks.
+    </p>
+    <br><a href="privacy.html" class="privacy-link">Privacy Policy</a>
 </footer>
 
     </div>
