--- a/guide.html
+++ b/guide.html
@@ -48,7 +48,10 @@
                         3. 收到二補匯款通知郵件後，於匯款期限內完成匯款，並填寫匯款回報表單。<br>
                         4. 等侯配送。<br>
 <br>
-                        　　　☾⋆. xxxxxx xxxxxxx ꜱᴛᴜᴅɪᴏ .⭑<br>
+                        <hr>
+<hr style="border: none; border-top: 1px dashed #ccc; margin: 20px 0;">
+                        <hr style="border: 0; height: 1px; background-image: linear-gradient(to right, rgba(0,0,0,0), rgba(150,150,250,0.75), rgba(0,0,0,0));">
+
 <br>
                         購買：<br>
                         1. 填寫餘量表單。<br>
