Update studio name from 'XXXX Studio' to 'Nebula Lullaby Studio'

--- a/guide.html
+++ b/guide.html
@@ -48,7 +48,7 @@
                         3. 收到二補匯款通知郵件後，於匯款期限內完成匯款，並填寫匯款回報表單。<br>
                         4. 等侯配送。<br>
 <br>
-                        <p style="text-align: center;">✧─────── ⋆⋅☆⋅⋆ ───────✧</p>
+                        　　　☾⋆. ɴᴇʙᴜʟᴀ ʟᴜʟʟᴀʙʏ ꜱᴛᴜᴅɪᴏ .⭑<br>
 <br>
                         購買：<br>
                         1. 填寫餘量表單。<br>
@@ -93,7 +93,7 @@
                         ⊹ 不接受棄單、不代為轉單，否則作黑名單公佈。請謹慎填表。<br>
                         ⊹ 如二補後閣下填表所留的聯絡方式均無法聯絡閣下，商品會從聯絡當天起保留7天，7天後每天收取$10行政費再次保留到達7天仍無主動聯絡，商品掉落餘量並且不會退款。<br>
 <br>
-                        　　　☾⋆. xxxxxx xxxxxxx ꜱᴛᴜᴅɪᴏ .⭑<br>
+                        　　　☾⋆. ɴᴇʙᴜʟᴀ ʟᴜʟʟᴀʙʏ ꜱᴛᴜᴅɪᴏ .⭑<br>
 <br>
                         ⊹ 只接受成年人購買。<br>
                         ⊹ 請由填表本人匯款，禁止他人代付。<br>
@@ -102,7 +102,7 @@
                         ⊹ 商品會以順豐到付配送，不提供面交、自取、平郵。如需其他配送方式，請於填表時備註，不一定能配合。順豐配送方式及收費請自行至順豐官網查閱。<br>
                         ⊹ 商品匯款通知 / 二補通知 / 商品配送通知，將會寄信至填表時使用的電郵。如於公告已電郵通知後仍未收到電郵，請檢查電郵的垃圾信件匣。<br>
                         ⊹ 跟團名單 / 匯款確認 / 配送狀態，會在進度記錄表更新。如兩天內仍無閣下的更新或發現問題，請DM聯絡。<br>
-                        ⊹ XXXX Studio保留接受訂單與否、修改條款及取消交易之最終權利。如有任何爭議，將以XXXX Studio之紀錄及最終解釋為準。
+                        ⊹ Nebula Lullaby Studio保留接受訂單與否、修改條款及取消交易之最終權利。如有任何爭議，將以我方之紀錄及最終解釋為準。
                     </div>
                 </div>
             </div>
@@ -121,7 +121,7 @@
                         ⊹ 商品金額不含香港本地配送費用。<br>
                         ⊹ 不接受棄單、退款，否則作黑名單公佈。請謹慎填表。<br>
 <br>
-                        　　　☾⋆. xxxxxx xxxxxxx ꜱᴛᴜᴅɪᴏ .⭑<br>
+                        　　　☾⋆. ɴᴇʙᴜʟᴀ ʟᴜʟʟᴀʙʏ ꜱᴛᴜᴅɪᴏ .⭑<br>
 <br>
                         ⊹ 只接受成年人購買。<br>
                         ⊹ 請由填表本人匯款，禁止他人代付。<br>
@@ -129,7 +129,7 @@
                         ⊹ 匯款期限內未匯款，作黑名單公佈。<br>
                         ⊹ 商品會以順豐到付配送，不提供面交、自取、平郵。如需其他配送方式，請於填表時備註，不一定能配合。順豐配送方式及收費請自行至順豐官網查閱。<br>
                         ⊹ 商品匯款通知 / 商品配送通知，將會寄信至填表時使用的電郵。如於公告已電郵通知後仍未收到電郵，請檢查電郵的垃圾信件匣。<br>
-                        ⊹ XXXX Studio保留接受訂單與否、修改條款及取消交易之最終權利。如有任何爭議，將以XXXX Studio之紀錄及最終解釋為準。
+                        ⊹ Nebula Lullaby Studio保留接受訂單與否、修改條款及取消交易之最終權利。如有任何爭議，將以我方之紀錄及最終解釋為準。
                     </div>
                 </div>
             </div>
@@ -153,8 +153,8 @@
                         ⊹ 在影片中指出瑕疵/缺件問題<br>
 <br>
                         如經判定為瑕疵，只能有限度退換，不作退款。<br>
-                        瑕疵合理性由XXXX Studio與工廠方判定。<br>
-                        無影片證明、影片有取巧等可疑，XXXX Studio有權拒絕售後。<br>
+                        瑕疵合理性由Nebula Lullaby Studio與工廠方判定。<br>
+                        無影片證明、影片有取巧等可疑，我方有權拒絕售後。<br>
 <br>
                         非瑕疵情況：<br>
                         娃衣為半人工製作，出現誤差、線頭、灰塵、殘膠、可清潔污漬、不合娃體體型、左右裝飾不對稱、雷射切割留下的黃色/燒焦痕跡、縫線輕微歪斜、服裝上的裝飾位置與樣品照有些許差距、縫線鬆弛、針孔拉大等，無法進行售後服務。
