Enhance description with social media info
Updated description to include social media tracking information.

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             </h1> -->
 
             <!-- Add a short description about yourself or your brand -->
-            <p>香港原創棉花娃衣工作室</p>
+            <p>香港原創棉花娃衣工作室<br>最新預購及餘量資訊請追蹤我們的社群帳號</p>
 
             <!-- All your buttons go here -->
             <div class="button-stack" role="navigation">
