--- a/index.html
+++ b/index.html
@@ -72,8 +72,12 @@
               <div>頁內TITLE</div>
             </h1> -->
 
+            <h1>
+              <div>Nebula Lullaby Studio</div>
+            </h1>
+
             <!-- Add a short description about yourself or your brand -->
-            <p>香港原創棉花娃衣工作室<br>最新預購及餘量資訊請追蹤我們的社群帳號</p>
+            <p>香港原創棉花娃衣工作室</p>
 
             <!-- All your buttons go here -->
             <div class="button-stack" role="navigation">
