Update description to English

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             </h1>
 
             <!-- Add a short description about yourself or your brand -->
-            <p>香港原創棉花娃衣工作室</p>
+            <p>Hong Kong Original Doll Outfits Studio</p>
 
             <!-- All your buttons go here -->
             <div class="button-stack" role="navigation">
