--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             </h1> -->
 
             <h1>
-              <div>Nebula Lullaby Studio</div>
+              <div>Nebula Lullaby</div>
             </h1>
 
             <!-- Add a short description about yourself or your brand -->
