--- a/privacy.html
+++ b/privacy.html
@@ -45,15 +45,15 @@
 <footer class="footer">
     <!-- 社交媒體小圓按鈕區 -->
     <div class="social-icons-row">
-        <a href="你的X連結" class="social-circle" target="_blank" rel="noopener noreferrer"><img class="social-icon-img" src="images/icons/x.svg" alt="X Logo"></a>
-        <a href="你的Instagram連結" class="social-circle" target="_blank" rel="noopener noreferrer"><img class="social-icon-img" src="images/icons/instagram.svg" alt="Instagram Logo"></a>
-        <a href="你的Threads連結" class="social-circle" target="_blank" rel="noopener noreferrer"><img class="social-icon-img" src="images/icons/threads.svg" alt="Threads Logo"></a>
-        <a href="你的Facebook連結" class="social-circle" target="_blank" rel="noopener noreferrer"><img class="social-icon-img" src="images/icons/facebook.svg" alt="Facebook Logo"></a>
+        <a href="X" class="social-circle" target="_blank" rel="noopener noreferrer"><img class="social-icon-img" src="images/icons/x.svg" alt="X Logo"></a>
+        <a href="Instagram" class="social-circle" target="_blank" rel="noopener noreferrer"><img class="social-icon-img" src="images/icons/instagram.svg" alt="Instagram Logo"></a>
+        <a href="Threads" class="social-circle" target="_blank" rel="noopener noreferrer"><img class="social-icon-img" src="images/icons/threads.svg" alt="Threads Logo"></a>
+        <a href="Plurk" class="social-circle" target="_blank" rel="noopener noreferrer"><img class="social-icon-img" src="images/icons/plurk.svg" alt="Plurk Logo"></a>
       <!-- 如果還有其他社群可以繼續加 -->
     </div>
     
     <p class="copyright" style="line-height: 1.8;">
-        © 2026 Nebula Lullaby Studio. All rights reserved.<br>
+        © 2026 Nebula Lullaby Studio.<br>All rights reserved.<br>
         Nebula Lullaby&trade; and the infinity device are trademarks.
     </p>
     <br><a href="privacy.html" class="privacy-link">Privacy Policy</a>
