--- a/wish.html
+++ b/wish.html
@@ -15,7 +15,7 @@
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://nebulalullaby.studio/wish.html">
     <meta property="og:title" content="Nebula Lullaby Studio ⋆ 星雲搖籃曲 Make a Wish">
-    <meta property="og:description" content=“許願過去娃衣再販或新品元素">
+    <meta property="og:description" content=“許願娃衣再販或新品元素">
     <meta property="og:image" content="https://nebulalullaby.studio/images/og-m.png">
 
     <meta name="author" content="Nebula Lullaby Studio ⋆ 星雲搖籃曲">
@@ -29,7 +29,7 @@
     <div class="container">
 
         <h1 style="font-size: 24px; margin-bottom: 10px; color: #7373B9;">Make a Wish</h1>
-        <p style="margin-bottom: 35px; color: #7373B9;">許願返場或新品元素</p>
+        <p style="margin-bottom: 35px; color: #7373B9;">許願再販或新品元素</p>
 
         <!-- Google Form 嵌入區 (妳之後把連結貼在這裡) -->
         <div class="guide-text" style="margin-top: 20px; padding: 10px !important;">
@@ -40,15 +40,15 @@
 <footer class="footer">
     <!-- 社交媒體小圓按鈕區 -->
     <div class="social-icons-row">
-        <a href="你的X連結" class="social-circle" target="_blank" rel="noopener noreferrer"><img class="social-icon-img" src="images/icons/x.svg" alt="X Logo"></a>
-        <a href="你的Instagram連結" class="social-circle" target="_blank" rel="noopener noreferrer"><img class="social-icon-img" src="images/icons/instagram.svg" alt="Instagram Logo"></a>
-        <a href="你的Threads連結" class="social-circle" target="_blank" rel="noopener noreferrer"><img class="social-icon-img" src="images/icons/threads.svg" alt="Threads Logo"></a>
-        <a href="你的Facebook連結" class="social-circle" target="_blank" rel="noopener noreferrer"><img class="social-icon-img" src="images/icons/facebook.svg" alt="Facebook Logo"></a>
+        <a href="X" class="social-circle" target="_blank" rel="noopener noreferrer"><img class="social-icon-img" src="images/icons/x.svg" alt="X Logo"></a>
+        <a href="Instagram" class="social-circle" target="_blank" rel="noopener noreferrer"><img class="social-icon-img" src="images/icons/instagram.svg" alt="Instagram Logo"></a>
+        <a href="Threads" class="social-circle" target="_blank" rel="noopener noreferrer"><img class="social-icon-img" src="images/icons/threads.svg" alt="Threads Logo"></a>
+        <a href="Plurk" class="social-circle" target="_blank" rel="noopener noreferrer"><img class="social-icon-img" src="images/icons/plurk.svg" alt="Plurk Logo"></a>
       <!-- 如果還有其他社群可以繼續加 -->
     </div>
     
     <p class="copyright" style="line-height: 1.8;">
-        © 2026 Nebula Lullaby Studio. All rights reserved.<br>
+        © 2026 Nebula Lullaby Studio.<br>All rights reserved.<br>
         Nebula Lullaby&trade; and the infinity device are trademarks.
     </p>
     <br><a href="privacy.html" class="privacy-link">Privacy Policy</a>
