--- a/collection.html
+++ b/collection.html
@@ -6,7 +6,7 @@
     <title>The Archive | Nebula Lullaby Studio ⋆ 星雲搖籃曲</title>
     <link rel="icon" type="image/x-icon" href="images/avatar.png">
 
-        <meta name="description" content="Nebula Lullaby Studio ⋆ 星雲搖籃曲 香港原創棉花娃衣工作室。歷年作品，10cm / 15cm / 20cm娃衣設計一覽。">
+        <meta name="description" content="Nebula Lullaby Studio ⋆ 星雲搖籃曲 香港原創棉花娃衣工作室。歷年作品，10cm / 15cm / 20cm設計一覽。">
 
     <meta name="keywords" content="Nebula Lullaby Studio, 星雲搖籃曲, 香港原創棉花娃衣, 娃衣工作室, 20cm棉花娃衣, 10cm棉花娃衣, 15cm棉花娃衣">
 
@@ -15,7 +15,7 @@
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://nebulalullaby.studio/collection.html">
     <meta property="og:title" content="Nebula Lullaby Studio ⋆ 星雲搖籃曲 The Archive">
-    <meta property="og:description" content=“過去娃衣一覽">
+    <meta property="og:description" content=“過去作品一覽">
     <meta property="og:image" content="https://nebulalullaby.studio/images/og-m.png">
 
     <meta name="author" content="Nebula Lullaby Studio ⋆ 星雲搖籃曲">
@@ -29,7 +29,7 @@
     <div class="container" style="max-width: 500px;"> <!-- 相簿頁寬度微調 -->
  
         <h1 style="font-size: 24px; margin-bottom: 10px;">The Archive</h1>
-        <p style="margin-bottom: 35px;">娃衣一覽</p>
+        <p style="margin-bottom: 35px;">作品一覽</p>
 
         <!-- 相簿網格 -->
         
@@ -144,14 +144,17 @@
 <!-- 以後增加 2025 或 2027，只需複製上面這段並改 ID 即可 -->
 
 <footer class="footer">
+    <!-- 社交媒體小圓按鈕區 -->
     <div class="social-icons-row">
-        <a href="你的X連結" class="social-circle" target="_blank" rel="noopener noreferrer"><img class="social-icon-img" src="images/icons/x.svg" alt="X Logo"></a>
-        <a href="你的Instagram連結" class="social-circle" target="_blank" rel="noopener noreferrer"><img class="social-icon-img" src="images/icons/instagram.svg" alt="Instagram Logo"></a>
-        <a href="你的Threads連結" class="social-circle" target="_blank" rel="noopener noreferrer"><img class="social-icon-img" src="images/icons/threads.svg" alt="Threads Logo"></a>
-        <a href="你的Facebook連結" class="social-circle" target="_blank" rel="noopener noreferrer"><img class="social-icon-img" src="images/icons/facebook.svg" alt="Facebook Logo"></a>
+        <a href="X" class="social-circle" target="_blank" rel="noopener noreferrer"><img class="social-icon-img" src="images/icons/x.svg" alt="X Logo"></a>
+        <a href="Instagram" class="social-circle" target="_blank" rel="noopener noreferrer"><img class="social-icon-img" src="images/icons/instagram.svg" alt="Instagram Logo"></a>
+        <a href="Threads" class="social-circle" target="_blank" rel="noopener noreferrer"><img class="social-icon-img" src="images/icons/threads.svg" alt="Threads Logo"></a>
+        <a href="Plurk" class="social-circle" target="_blank" rel="noopener noreferrer"><img class="social-icon-img" src="images/icons/plurk.svg" alt="Plurk Logo"></a>
+      <!-- 如果還有其他社群可以繼續加 -->
     </div>
+    
     <p class="copyright" style="line-height: 1.8;">
-        © 2026 Nebula Lullaby Studio. All rights reserved.<br>
+        © 2026 Nebula Lullaby Studio.<br>All rights reserved.<br>
         Nebula Lullaby&trade; and the infinity device are trademarks.
     </p>
     <br><a href="privacy.html" class="privacy-link">Privacy Policy</a>
