--- a/collection.html
+++ b/collection.html
@@ -50,9 +50,9 @@
                 <!-- 第一組第一張作品 -->
                 <div class="gallery-item">
                     <!-- 🔑 關鍵 2：使用 gallery-link，且引號全為半型 -->
-                    <a href="images/IMG_9097.PNG" class="gallery-link" data-gallery="2026 A">
+                    <a href="images/background.webp" class="gallery-link" data-gallery="2026 A">
                         <div class="img-wrapper">
-                            <img src="images/IMG_9097.PNG" alt="A面">
+                            <img src="images/background.webp" alt="A面">
                         </div>
                     </a>
                     <span>COLLECTION A XXXX</span>
@@ -60,9 +60,9 @@
 
                 <!-- 第一組第二張作品 -->
                 <div class="gallery-item hidden-photo">
-                    <a href="images/IMG_9097.PNG" class="gallery-link" data-gallery="2026 A">
+                    <a href="images/background.webp" class="gallery-link" data-gallery="2026 A">
                         <div class="img-wrapper">
-                            <img src="images/IMG_9097.PNG" alt="B面">
+                            <img src="images/background.webp" alt="B面">
                         </div>
                     </a>
                     <span>COLLECTION A XXXX</span>
@@ -70,9 +70,9 @@
 
                 <!-- 第二組第一張作品 -->
                 <div class="gallery-item">
-                    <a href="images/IMG_9097.PNG" class="gallery-link" data-gallery="2026 B">
+                    <a href="images/background.webp" class="gallery-link" data-gallery="2026 B">
                         <div class="img-wrapper">
-                            <img src="images/IMG_9097.PNG" alt="A面">
+                            <img src="images/background.webp" alt="A面">
                         </div>
                     </a>
                     <span>COLLECTION B XX</span>
@@ -82,7 +82,7 @@
                 <div class="gallery-item hidden-photo">
                     <a href="images/IMG_9098.PNG" class="gallery-link" data-gallery="2026 B">
                         <div class="img-wrapper">
-                            <img src="images/IMG_9097.PNG" alt="B面">
+                            <img src="images/background.webp" alt="B面">
                         </div>
                     </a>
                     <span>COLLECTION B XX</span>
@@ -90,9 +90,9 @@
 
                 <!-- 第二組第三張作品 -->
                 <div class="gallery-item hidden-photo">
-                    <a href="images/IMG_9097.PNG" class="gallery-link" data-gallery="2026 B">
+                    <a href="images/background.webp" class="gallery-link" data-gallery="2026 B">
                         <div class="img-wrapper">
-                            <img src="images/IMG_9097.PNG" alt="C面">
+                            <img src="images/background.webp" alt="C面">
                         </div>
                     </a>
                     <span>COLLECTION B XX</span>
@@ -119,9 +119,9 @@
                 <!-- 第一組第一張作品 -->
                 <div class="gallery-item">
                     <!-- 🔑 關鍵 2：使用 gallery-link，且引號全為半型 -->
-                    <a href="images/IMG_9097.PNG" class="gallery-link" data-gallery="2025">
+                    <a href="images/background.webp" class="gallery-link" data-gallery="2025">
                         <div class="img-wrapper">
-                            <img src="images/IMG_9097.PNG" alt="Work 1">
+                            <img src="images/background.webp" alt="Work 1">
                         </div>
                     </a>
                     <span>XXXXXXXX XXXXX</span>
@@ -129,9 +129,9 @@
 
                 <!-- 第一組第二張作品 -->
                 <div class="gallery-item hidden-photo">
-                    <a href="images/IMG_9097.PNG" class="gallery-link" data-gallery="2025">
+                    <a href="images/background.webp" class="gallery-link" data-gallery="2025">
                         <div class="img-wrapper">
-                            <img src="images/IMG_9097.PNG" alt="Work 2">
+                            <img src="images/background.webp" alt="Work 2">
                         </div>
                     </a>
                     <span>XXXXXXXX XXXXX</span>
