--- a/collection.html
+++ b/collection.html
@@ -50,7 +50,7 @@
                 <!-- 第一組第一張作品 -->
                 <div class="gallery-item">
                     <!-- 🔑 關鍵 2：使用 gallery-link，且引號全為半型 -->
-                    <a href="images/background.webp" class="gallery-link" data-gallery="2026 A">
+                    <a href="images/background.webp" class="gallery-link" data-gallery="2026 A" title="XXXXXXXXX有上衣、褲子、外套、領帶、鞋子，共5點。<br>12223333334433333333311111212222222222222221111111111111">
                         <div class="img-wrapper">
                             <img src="images/background.webp" alt="A面">
                         </div>
