--- a/collection.html
+++ b/collection.html
@@ -50,7 +50,7 @@
                 <!-- 第一組第一張作品 -->
                 <div class="gallery-item">
                     <!-- 🔑 關鍵 2：使用 gallery-link，且引號全為半型 -->
-                    <a href="images/background.webp" class="gallery-link" data-gallery="2026 A" title="這裡輸入你想顯示的娃衣描述">
+                    <a href="images/background.webp" class="gallery-link" data-gallery="2026 A" title="這裡輸入你想顯示的娃衣描述<br>XXXXXXXXXXXXXXXXXXXXXXXXX<br>XXXXXXXXXXXXXXXX">
                         <div class="img-wrapper">
                             <img src="images/background.webp" alt="A面">
                         </div>
