--- a/privacy.html
+++ b/privacy.html
@@ -54,7 +54,7 @@
     
     <p class="copyright" style="line-height: 1.8;">
         © 2026 Nebula Lullaby Studio.<br>All rights reserved.<br>
-        Nebula Lullaby&trade; and the infinity device are trademarks.
+        Nebula Lullaby&trade; and the infinity device<br>are trademarks.
     </p>
     <br><a href="privacy.html" class="privacy-link">Privacy Policy</a>
 </footer>
