--- a/privacy.html
+++ b/privacy.html
@@ -32,7 +32,7 @@
 
             <section style="margin-bottom: 25px;">
               <h3 style="color: #7373B9; margin-bottom: 10px;">資料保護</h3>
-              <p>XXXX Studio承諾不會將您的個人資料出售、租借或洩漏給任何第三方（物流服務商除外）。所有表單回覆均透過受信任的平台（如 Google Forms）進行加密儲存。</p>
+              <p>Nebula Lullaby Studio承諾不會將您的個人資料出售、租借或洩漏給任何第三方（物流服務商除外）。所有表單回覆均透過受信任的平台（如 Google Forms）進行加密儲存。</p>
             </section>
 
             <section style="margin-bottom: 25px;">
