--- a/guide.html
+++ b/guide.html
@@ -67,7 +67,7 @@
                 <div id="guide2" class="year-content hidden">
                     <div class="guide-text">
                         商品會以順豐到付配送，不提供面交、自取、平郵。<br>
-                        如需其他配送方式，請於填表時備註，不一定能配合。<br>
+                        如需其他配送方式，可於填表時備註，注意並非一定能配合。<br>
                         順豐配送方式及收費請自行至順豐官網查閱。<br>
                         預購視工期而定；餘量將於 3-5 個工作天內發出。
                     </div>
@@ -84,14 +84,14 @@
                     <div class="guide-text">
                         ⊹ 跟團等於預購。<br>
                         ⊹ 預購表單為正式開團的表單，填表即代表已詳閱並同意【跟團須知】 & 【關於售後】，等同確定跟團。<br>
-                        ⊹ 從製作大貨到包裝出貨，最少需時5個月。如遇廠方特殊情況製作可能會延期，請考慮可接受再填表。<br>
+                        ⊹ 從製作大貨到包裝出貨，最少需時 5 個月。如遇廠方特殊情況製作可能會延期，請考慮可接受再填表。<br>
                         ⊹ 會跟進更新大貨工期與進度，有進度記錄表可供追蹤 / 進度群可自由參與。恕不逐一通知。<br>
                         ⊹ 成團後會通知匯款。<br>
                         ⊹ 預購匯款需先付商品本體全款金額，廠方出貨後，會通知全團攤分工廠到港運費（二補）。<br>
                         ⊹ 二補不含香港本地配送費用。<br>
                         ⊹ 除非意外流團否則無法退款。<br>
                         ⊹ 不接受棄單、不代為轉單，否則作黑名單公佈。請謹慎填表。<br>
-                        ⊹ 如二補後閣下填表所留的聯絡方式均無法聯絡閣下，商品會從聯絡當天起保留7天，7天後每天收取$10行政費再次保留到達7天仍無主動聯絡，商品掉落餘量並且不會退款。<br>
+                        ⊹ 如二補後閣下填表所留的聯絡方式均無法聯絡閣下，商品會從聯絡當天起保留 7 天，7 天後每天收取 $10HKD 行政費再次保留到達 7 天仍無主動聯絡，商品掉落餘量並且不會退款。<br>
 <br>
                         　　　☾⋆. ɴᴇʙᴜʟᴀ ʟᴜʟʟᴀʙʏ ꜱᴛᴜᴅɪᴏ .⭑<br>
 <br>
@@ -99,9 +99,9 @@
                         ⊹ 請由填表本人匯款，禁止他人代付。<br>
                         ⊹ 不接受支票及信用卡。<br>
                         ⊹ 匯款期限內未匯款，作黑名單公佈。<br>
-                        ⊹ 商品會以順豐到付配送，不提供面交、自取、平郵。如需其他配送方式，請於填表時備註，不一定能配合。順豐配送方式及收費請自行至順豐官網查閱。<br>
+                        ⊹ 商品會以順豐到付配送，不提供面交、自取、平郵。如需其他配送方式，可於填表時備註，注意並非一定能配合。順豐配送方式及收費請自行至順豐官網查閱。<br>
                         ⊹ 商品匯款通知 / 二補通知 / 商品配送通知，將會寄信至填表時使用的電郵。如於公告已電郵通知後仍未收到電郵，請檢查電郵的垃圾信件匣。<br>
-                        ⊹ 跟團名單 / 匯款確認 / 配送狀態，會在進度記錄表更新。如兩天內仍無閣下的更新或發現問題，請DM聯絡。<br>
+                        ⊹ 跟團名單 / 匯款確認 / 配送狀態，會在進度記錄表更新。如兩天內仍無閣下的更新或發現問題，請盡快IG DM聯絡。<br>
                         ⊹ Nebula Lullaby Studio保留接受訂單與否、修改條款及取消交易之最終權利。如有任何爭議，將以我方之紀錄及最終解釋為準。
                     </div>
                 </div>
@@ -127,7 +127,7 @@
                         ⊹ 請由填表本人匯款，禁止他人代付。<br>
                         ⊹ 不接受支票及信用卡。<br>
                         ⊹ 匯款期限內未匯款，作黑名單公佈。<br>
-                        ⊹ 商品會以順豐到付配送，不提供面交、自取、平郵。如需其他配送方式，請於填表時備註，不一定能配合。順豐配送方式及收費請自行至順豐官網查閱。<br>
+                        ⊹ 商品會以順豐到付配送，不提供面交、自取、平郵。如需其他配送方式，可於填表時備註，注意並非一定能配合。順豐配送方式及收費請自行至順豐官網查閱。<br>
                         ⊹ 商品匯款通知 / 商品配送通知，將會寄信至填表時使用的電郵。如於公告已電郵通知後仍未收到電郵，請檢查電郵的垃圾信件匣。<br>
                         ⊹ Nebula Lullaby Studio保留接受訂單與否、修改條款及取消交易之最終權利。如有任何爭議，將以我方之紀錄及最終解釋為準。
                     </div>
@@ -143,14 +143,14 @@
                 <div id="guide5" class="year-content hidden">
                     <div class="guide-text">
                         出貨前會檢查是否存在明顯瑕疵、缺件。<br>
-                        由於只接受簽收後五天內，提供完整開箱/拆封影片要求售後，為保障權益謹請錄影。<br>
+                        由於只接受簽收後 5 天內，提供完整開箱 / 拆封影片要求售後，為保障權益謹請錄影。<br>
 <br>
                         售後影片要求如下：<br>
                         ⊹ 影片畫質清晰無剪接<br>
                         ⊹ 從完整配送包裝開始錄影<br>
                         ⊹ 拆封前需先展示包裝完整無損<br>
                         ⊹ 一切拆封檢查均不可離開畫面<br>
-                        ⊹ 在影片中指出瑕疵/缺件問題<br>
+                        ⊹ 在影片中指出瑕疵 / 缺件問題<br>
 <br>
                         如經判定為瑕疵，只能有限度退換，不作退款。<br>
                         瑕疵合理性由Nebula Lullaby Studio與工廠方判定。<br>
